# LLM-Reranked-Knowledge-Graph-Link-Prediction-with-RL-based-Prompt-Policy-Optimization

./: .env.example  .gitignore  README.md  catalog-info.yaml  mkdocs.yml  pyproject.toml
configs/: default.yaml
docs/: ARCHITECTURE.md  COST_TRACKING.md  EVALUATION.md  PROMPTS.md  RL_AGENTS.md  index.md
notebooks/: 01_dataset_exploration.ipynb  02_embedding_baseline.ipynb  03_wikidata_grounding.ipynb  04_llm_scoring.ipynb  05_reranking_pipeline.ipynb  06_rl_bandit.ipynb  07_budget_experiment.ipynb  08_results_analysis.ipynb
scripts/: __init__.py  ablation_alpha.py  ablation_budget_levels.py  ablation_embedding_dim.py  ablation_num_candidates.py  bandit_demo.py  budget_demo.py  budget_sweep.py  check_config.py  compare_templates.py  cost_report.py  download_fb15k237.py  eval_dummy.py  eval_embedding.py  generate_report.py  list_models.py  llm_smoke_test.py  rerank_demo.py  resolve_sample_mids.py  run_experiment.py  smoke_load_dataset.py  train_embedding.py
src/: __init__.py  config.py  experiment.py
tests/: conftest.py  test_ablation_scripts.py  test_bandit.py  test_budget_agent.py  test_budget_experiment.py  test_candidates.py  test_config.py  test_cost_tracker.py  test_dataset.py  test_embedding.py  test_evaluate.py  test_experiment.py  test_features.py  test_integration.py  test_llm_client.py  test_logging_config.py  test_metrics.py  test_metrics_edge_cases.py  test_prompt_renderer.py  test_prompt_selector.py  test_report_generator.py  test_reproducibility.py  test_reranker.py  test_results_loader.py  test_scorer.py  test_smoke.py  test_utils_integration.py  (+1 more)
(+32 files in other folders)
